<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_order"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_active_deliveries"
            android:icon="@drawable/ic_menu_order_in_delivery"
            android:title="@string/menu_orders_in_delivery" />
        <item
            android:id="@+id/nav_couriers"
            android:icon="@drawable/ic_menu_users"
            android:title="@string/menu_couriers" />
        <!--<item
        android:id="@+id/nav_edit"
        android:title="@string/menu_edit">

        <menu>
            <item
                android:id="@+id/nav_edit_users"
                android:icon="@drawable/ic_menu_edit_users"
                android:title="@string/menu_users" />
        </menu>

        </item>-->
    </group>
</menu>

